--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -1,1 +1,51 @@
-<h1>spaghetti</h1>
+<body>
+<h1><strong>spaghetti</strong></h1>
+<img src="./spaghetti.jpg">
+<p> There's nothing like classic spaghetti and meat sauce to bring </p>
+<p> people together around the dinner table. This homemade spaghetti </p> 
+<p> sauce with ground beef recipe will satisfy all your comfort food cravings.</p>
+<h2>INGREDIENTS</h2>
+<ul>
+        <ul>
+            <li>1 pound ground beef</li>
+            <li>1 medium onion,chopped</li>
+            <li>4 cloves garlic,minced</li>
+            <li>1 small green bell pepper,diced</li>
+            <li>1(28 ounce)can diced tomatoes</li>
+            <li>1(16 ounce)can tomato sauce</li>
+            <li>1(6 ounce)can tomato paste</li>
+            <li>2 teaspoons dried oregano</li>
+            <li>1 teaspoon salt</li>
+            <li>1/2 teaspoon ground black papper</li>
+            <li>0.5 kg of pasta</li>
+        </ul>
+</ul>
+<h3>STEPS</h3>
+<ul>
+    <li><strong>Spaghetti Sauce</strong>
+        <ol>
+            <li>Combine ground beef, onion, garlic, and green pepper in a large saucepan over medium-high heat.</li>
+            <li>Cook and stir until meat is browned and crumbly and vegetables are tender, 5 to 7 minutes.</li>
+            <li>Drain grease.</li>
+            <li>Stir diced tomatoes, tomato sauce, and tomato paste into the pan.</li>
+            <li>Season with oregano, basil, salt, and pepper.</li>
+            <li>Simmer spaghetti sauce for 1 hour, stirring occasionally.</li>
+            <li>Serve hot and enjoy!</li>
+        </ol>
+        </li>
+        <li><strong>Pasta</strong>
+            <ol>
+                <li>Fill a large pot with cold water cover and bring it to a rolling boil</li>
+                <li>Add 1 heaping tablespoon of Kosher salt. The spaghetti must be seasoned before adding the sauce.</li>
+                <li>Add the spaghetti noodles and stir. Cook until it tastes al dente or firm to the bite.</li>
+                <li>Start tasting the spaghetti two minutes before the recommended cooking time on the package.</li>
+                <li>Drain the spaghetti in a colander, then toss the pasta quickly with the warm sauce.</li>
+                <li>Serve and enjoy!</li>
+            </ol>
+
+        </li>
+</ul>
+
+    
+
+</body>
