--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
    
         <h1>odin-recipes</h1>
         <a href="recipes/spaghetti.html">spaghetti</a>
+        <a href="recipes/cherry-cola-ribs.html">cherry cola ribs</a>
+        <a href="recipes/the-best-meatballs.html">the best meatballs</a>
 
     </body>
 </html>
