--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     </head>
     <body>
    
-        <h1>odin-recipes</h1>
-        <a href="recipes/spaghetti.html">spaghetti</a>
-        <a href="recipes/cherry-cola-ribs.html">cherry cola ribs</a>
-        <a href="recipes/the-best-meatballs.html">the best meatballs</a>
+        <h1>FOOthe</h1>
+        <ul>
+           <li><a href="recipes/spaghetti.html">spaghetti</a></li>
+           <li><a href="recipes/cherry-cola-ribs.html">cherry cola ribs</a></li>
+           <li><a href="recipes/the-best-meatballs.html">the best meatballs</a></li>
+        </ul>
 
     </body>
 </html>
