--- a/recipes/cherry-cola-ribs.html
+++ b/recipes/cherry-cola-ribs.html
@@ -1,5 +1,65 @@
 <body>
-    <h1>Cherry cola ribs</h1>
+    <h1><strong>Cherry Cola Ribs</strong></h1>
     <img src="cherry-cola-ribs.jpg">
+
+        <p></p><em>I've come to find out that cherry cola makes an incredibly delicious rack of ribs,</em></p>
+        <p><em>which strangely enough, don't really taste like either cherry or cola,</em>
+        
+        <em>but taste very similar to your All-American Midwest-style barbecue.</em>
+
+        <h2>INGREDIENTS</h2>
+        <ul><strong>Dry rub:</strong>
+            <li>1 tablespoon kosher salt</li>
+            <li>1 teaspoon smoked paprika</li>
+            <li>1/2 teaspoon freshly ground black pepper</li>
+            <li>1/2 teaspoon onion powder</li>
+            <li>1/2 teaspoon garlic powder</li>
+        </ul>
+        <ul><strong>Wet Rub:</strong>
+            <li>2 tablespoon prepared yellow mustard</li>
+            <li>1 tablespoon apple cider vinegar</li>
+            <li>2 tablespoons cherry cola</li>
+        </ul>
+        <ul><strong>Ribs and Sauce:</strong>
+            <li>1 (3pound)rack baby ribs, membrane removed</li>
+            <li>1 1/2 cups cherry cola</li>
+            <li>2 tablespoons ketchup</li>
+            <li>1/4 teaspoons ketchup</li>
+            <li>1/4 teaspoon freshly ground black pepper</li>
+            <li>salt to taste</li>
+        </ul>
+        <h2><strong>STEPS</strong></h2>
+        <ul>
+            <li><strong>Dry rub</strong></li>
+            <ul>
+                <li>Whisk salt, smoked paprika, onion powder, garlic powder, and 1/2 teaspoon black pepper. Set aside.</li>
+            </ul>
+            <li><strong>Wet rub</strong></li>
+            <ul>
+                <li>Whisk mustard, vinegar, and 2 tablespoons cherry cola together in a small bowl. Set aside.</li>
+            </ul>
+            <li><strong>Process</strong>
+                <ol>
+                    <li>Preheat the oven to 250 degrees F (120 degrees C).</li>
+                    <li>Line a sheet pan with a piece of foil long enough to extend past the rack of ribs by at least 6 inches on both ends.</li>
+                    <li>Use large size, heavy-duty foil if possible. Place the ribs, meat side up, on the foil.</li>
+                    <li>Brush wet rub over top and sides, and sprinkle about 60% of dry rub over the surface</li>
+                    <li>Turn ribs over and, with the bone side up, brush with wet rub, then sprinkle with all the remaining dry rub.</li>
+                    <li>Center the ribs lengthwise on the foil, and bring up the ends of the foil, like a boat, and crimp so any juices will stay inside.</li>
+                    <li>Crimp the two long edges together over the top of the ribs.</li>
+                    <li>The foil doesnt have to be airtight, but the whole rack should be covered.</li>
+                    <li>Bake in the preheated oven for 2 hours.<strong>Remove, open the foil, and pour off juices that have accumulated in the foil into a saucepan.</li>
+                    <li>Turn the rack meat side up, and brush with wet rub. Enclose again in the foil, and continue to roast at 250 degrees F (120 degrees C) for 1 hour.</li>
+                    <li>Add any remaining wet rub to the juices in the saucepan, then add the 1 1/2 cups cherry cola, ketchup, and 1/4 teaspoon freshly ground black pepper.</li>
+                    <li>Bring to a simmer on medium high, cook until liquid is reduced by half.</li>
+                    <li> Once it is the thickness of barbecue sauce, remove from heat entirely.</li>
+                    <li>After one hour at 250 degrees F (120 degrees C), remove ribs from the oven, and open out the foil, pressing foil flat to line the pan.</li>
+                    <li>Turn the oven temperature up to 300 degrees F (150 degrees C).</li>
+                    <li>Brush ribs with sauce. Return ribs to the oven for 15 minutes. Repeat this process 4 times</li>
+                    <li>Let ribs rest for about 10 minutes. Slice between each rib with a sharp knife, and serve with extra sauce!!!</strong></li>
+                </ol>
+            </li>
+        </ul>
+       
 
 </body>
