--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -1,12 +1,12 @@
 <body>
 <h1><strong>spaghetti</strong></h1>
 <img src="./spaghetti.jpg">
-<p> There's nothing like classic spaghetti and meat sauce to bring </p>
-<p> people together around the dinner table. This homemade spaghetti </p> 
-<p> sauce with ground beef recipe will satisfy all your comfort food cravings.</p>
+<p><em> There's nothing like classic spaghetti and meat sauce to bring </em> </p>
+<p><em>people together around the dinner table. This homemade spaghetti</em> </p> 
+<p><em>sauce with ground beef recipe will satisfy all your comfort food cravings.</em> </p>
 <h2>INGREDIENTS</h2>
-<ul>
-        <ul>
+<ul><strong>Pasta and Sauce:</strong>
+        
             <li>1 pound ground beef</li>
             <li>1 medium onion,chopped</li>
             <li>4 cloves garlic,minced</li>
@@ -18,7 +18,7 @@
             <li>1 teaspoon salt</li>
             <li>1/2 teaspoon ground black papper</li>
             <li>0.5 kg of pasta</li>
-        </ul>
+        
 </ul>
 <h3>STEPS</h3>
 <ul>
