--- a/recipes/the-best-meatballs.html
+++ b/recipes/the-best-meatballs.html
@@ -1,4 +1,35 @@
 <body>
     <h1>The Best Meatballs</h1>
     <img src="40399-The-Best-Meatballs-ddmfs-4x3-080-858db61ac9d645b4880adf6417035ad0.jpg">
+    <p><em>Learn how to make meatballs with this recipe that is the best meatball recipe I have ever tried!</p>
+    <p>I've used the combination of pork, beef, and veal but you can make them with just ground beef and they still taste great.</p>
+    <p>Definitely use fresh bread crumbs and freshly grate your cheese instead of using the canned variety... It really does make a difference!</em></p>
+    <h1>INGREDIENTS</h1>
+    <ul><strong>Meatballs:</strong>
+        <li>1 pound ground beef</li>
+        <li>1/2 pound ground veal</li>
+        <li>1/2 pound ground pork</li>
+        <li>1 cup freshly grated Romano cheese</li>
+        <li>2 eggs</li>
+        <li>2 cloves garlic,minced</li>
+        <li>1 1/2 tablespoons chopped italian flat leaf parsley</li>
+        <li>salt and ground black pepper to taste</li>
+        <li>2 cups stale Italian bread, crumbled</li>
+        <li>1 1/2 cups lukewarm water</li>
+        <li>1 cup olive oil</li>
+    </ul>
+    <h2><Strong>STEPS</Strong></h2>
+    <ul><li><strong>Process</strong>
+        <ol>
+            <li>Combine meat in large bowl.</li>
+            <li>Mix cheese,eggs,garlic,parsley,salt and pepper.</li>
+            <li>Add bread crumbs and slowly mix in water until mixture holds shape.</li>
+            <li>Shape into meatballs.</li>
+            <li>Add meatballs in batches and cook into hot olive oil</li>
+            <li>Cook until browned and slightly crisp around 10 to 15 minutes.</li>
+            <li>Drain on paper towels</li>
+            <li>Enjoy!</li>
+        </ol>
+    </li>
+    </ul>
 </body>
